ready hu05 with test